-correction du css pour une meilleurs lisibilité des textes. -supprésion de code HTML inutile -refonte de la page contact -quelques petits correctifs sur la visibilité du site

--- a/style.css
+++ b/style.css
@@ -539,7 +539,7 @@ a[data-lightbox] {
 
 a[data-lightbox]:hover::before {
     content: "+";
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 32px;
     width: 50px;
     height: 50px;
@@ -703,7 +703,8 @@ p {
 
 .social {
     max-width: 400px;
-    margin: auto auto auto auto;
+    padding: 15px 20px;
+    display: contents;
 }
 
 h2 {
@@ -772,13 +773,13 @@ h4 {
 .bgc-dark-slate-blue {
     background-color: #364577;
 }
-
 .bgc-atomic-tangerine {
     background-color: #F3976C;
 }
 
+
 .tc-white {
-    color: #F3976C!important;
+    color: white!important;
 }
 
 .btn-atomic-tangerine {
@@ -810,10 +811,6 @@ h4 {
 .icon-dark-slate-blue {
     color: #364577;
     border-color: #364577;
-}
-
-.bg-dots-bg {
-    background-image: url("img/dots-bg.png");
 }
 
 
@@ -1055,10 +1052,40 @@ h4 {
 .col-sm-4 a {
     color: black!important;
 }
+.partner {
+    width: 300px;
+    padding: 40px 0px 0 0;
+    margin: auto;
+}
 .citation {
     font-size: 20px;
     font-weight: 800;
 }
 .citation_legende {
     font-size: 16px;
+}
+.logo_header {
+    width: 200px;
+    padding: 25px 20px;
+    margin: 0 0 0 50px;
+}
+.header_contact a {
+   text-decoration: none;
+    padding: 30px 10px;
+}
+.header_contact {
+    display: flex;
+    margin: 0 80px 0 0;
+}
+
+#h_contact {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 25px;
+}
+.form {
+    text-align: center;
+}
+.form label {
+    text-align: right;
 }
